Update User service

--- a/src/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
@@ -4,6 +4,10 @@
     this.ViewData["Title"] = "Approved Books";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/admin/tableSection.css" />
+}
+
 <partial name="PartialViews/_BooksTablePartial"/>
 
 <!-- Unapprove Book Modal -->
