--- a/src/Web/Bookworm.Web/Areas/Admin/Views/Book/DeletedBooks.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/Book/DeletedBooks.cshtml
@@ -4,6 +4,10 @@
     this.ViewData["Title"] = "Deleted Books";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/admin/tableSection.css" />
+}
+
 <partial name="PartialViews/_BooksTablePartial" />
 
 <!-- Undelete Book Modal -->
