--- a/src/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Deleted Quotes";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/admin/tableSection.css" />
+}
+
 <partial name="PartialViews/Quotes/_QuotesTablePartial" />
 
 <div class="modal fade"
