--- a/src/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
@@ -6,6 +6,10 @@
     ViewData["ModalId"] = "approveQuoteModal";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/admin/tableSection.css" />
+}
+
 <partial name="PartialViews/Quotes/_QuotesTablePartial" />
 
 <div class="modal fade"
