--- a/src/Web/Bookworm.Web/Areas/Admin/Views/Quote/ApprovedQuotes.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/Quote/ApprovedQuotes.cshtml
@@ -1,7 +1,11 @@
 ﻿@model QuoteListingViewModel
 
 @{
-    ViewData["Title"] = "Approved Quotes";
+    ViewData[Title] = "Approved Quotes";
+}
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/admin/tableSection.css" />
 }
 
 <partial name="PartialViews/Quotes/_QuotesTablePartial" />
