--- a/src/Web/Bookworm.Web/Areas/Admin/Views/User/Edit.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/User/Edit.cshtml
@@ -1,20 +1,34 @@
-﻿@model UserViewModel
+﻿@using Bookworm.Data.Models
+@model UserViewModel
 
 @{
-    ViewData["Title"] = "Edit User";
+    ViewData[Title] = "Edit User";
+    var roles = (List<ApplicationRole>)this.ViewData["Roles"];
 }
 
-<h1 class="text-center mt-5">@ViewData["Title"]</h1>
+@section Styles {
+    <link rel="stylesheet" href="~/css/admin/userEdit.css" />
+}
 
+<section class="userEditSection">
+    <h1 class="text-center">@ViewData[Title]</h1>
 
-<form method="post" enctype="multipart/form-data">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="UserName"></label>
-        <input asp-for="UserName" class="form-control" />
-    </div>
-    <input type="hidden" asp-for="Id">
-    <div class="text-center">
-        <button id="update-profile-button" type="submit" class="btn btn-outline-danger">Edit Profile</button>
-    </div>
-</form>
+    <form method="post">
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <input type="hidden" asp-for="Id">
+        <div class="form-group">
+            <label>Username</label>
+            <input asp-for="UserName" class="form-control" />
+        </div>
+        <select asp-for="@Model.Roles" class="form-control">
+            @foreach (var role in roles)
+            {
+                <option selected=@(Model.Roles.Contains(role.Name))>@role.Name</option>
+            }
+        </select>
+        <div class="text-center">
+            <button type="submit" class="btn btn-danger">Edit Profile</button>
+        </div>
+    </form>
+</section>
+
