--- a/src/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
@@ -6,12 +6,12 @@
 
 <h1 class="text-center pt-5">Manage Users</h1>
 
-<table class="table table-striped table-dark table-bordered" id="dataTable" width="100%" cellspacing="0">
+<table class="table table-dark table-bordered table-hover" id="dataTable" width="100%">
     <thead>
         <tr>
             <th>Username</th>
             <th>Email</th>
-            <th>Actions</th>
+            <th class="text-center">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -25,16 +25,16 @@
                        asp-controller="User"
                        asp-action="Edit"
                        asp-route-id="@user.Id"
-                       class="btn btn-outline-warning">
-                        Edit User
+                       class="btn btn-warning w-100">
+                        Edit
                     </a>
-                    <a asp-area="admin"
+                    @* <a asp-area="admin"
                        asp-controller="User"
                        asp-action="Roles"
                        asp-route-userId="@user.Id"
-                       class="btn btn-outline-warning">
+                       class="btn btn-warning">
                         User Role
-                    </a>
+                    </a> *@
                 </td>
             </tr>
         }
@@ -42,6 +42,5 @@
 </table>
 
 @section Scripts {
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
-    <script src="~/js/datatable.js"></script>
+    <partial name="PartialViews/_AdminBooksAndQuotesScriptPartial" />
 }
