--- a/src/Web/Bookworm.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Bookworm.Web.ViewModels.Users;
 @using Bookworm.Web.ViewModels.Books;
 @using Bookworm.Web.ViewModels.Quotes;
+@using static Bookworm.Web.StaticKeys.ViewDataKeys;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
