--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
@@ -57,7 +57,7 @@ else
             }
         </h3>
     }
-    <div class="tableContainer">
+    <section class="tableSection">
         <table class="table table-hover table-dark table-bordered fs-5" id="dataTable">
             <thead>
                 <tr>
@@ -203,5 +203,5 @@ else
                 }
             </tbody>
         </table>
-    </div>
+    </section>
 }
