--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksTablePartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksTablePartial.cshtml
@@ -35,7 +35,7 @@ else
             <text>Manage Deleted Books</text>
         }
     </h3>
-    <div class="my-5">
+    <section class="tableSection">
         <table class="table table-dark table-bordered table-hover" id="dataTable">
             <thead>
                 <tr>
@@ -129,5 +129,5 @@ else
                 }
             </tbody>
         </table>
-    </div>
+    </section>
 }
