--- a/src/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/src/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -8,7 +8,9 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/lib/select2/css/select2.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+          rel="stylesheet" />
+
     <link rel="stylesheet" href="~/css/book/bookAll.css" asp-append-version="true" />
 }
 
