--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_AdminBooksAndQuotesScriptPartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_AdminBooksAndQuotesScriptPartial.cshtml
@@ -1,3 +1,9 @@
 ﻿<script src="~/js/modal.js"></script>
-<script>$(document).ready(function () { $('#dataTable').DataTable(); });</script>
-<script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#dataTable').DataTable();
+    });
+</script>
+
+<script src="https://cdn.datatables.net/2.1.5/js/dataTables.js"></script>
