--- a/src/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/src/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -210,6 +210,8 @@
     <script src="~/js/book/rating.js"></script>
     <script src="~/js/book/comments.js"></script>
     <script type="module" src="~/js/book/addToFavorites.js"></script>
-    <script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
+    <script src="https://cdn.tiny.cloud/1/2inr0ldypeixlug7qi77045mkn5r03rnlkhn1cybt8lacrhq/tinymce/7/tinymce.min.js"
+            referrerpolicy="origin">
+    </script>
     <script src="~/js/tinyMce.js"></script>
 }
