--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksTablePartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksTablePartial.cshtml
@@ -36,7 +36,7 @@ else
         }
     </h3>
     <section class="tableSection">
-        <table class="table table-dark table-bordered table-hover" id="dataTable">
+        <table class="table table-dark table-bordered table-hover dataTable dtr-inline" id="dataTable">
             <thead>
                 <tr>
                     <th scope="col">#</th>
