--- a/src/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -1,16 +1,33 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@this.ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
-    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/lib/animate.css/animate.min.css" />
+    <title>@this.ViewData[Title]</title>
+
+    @* Bootstrap *@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
+
+    @* Font Awesome *@
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+
+    @* Animate CSS *@
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    @* Site CSS *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
     @await this.RenderSectionAsync("Styles", required: false)
 </head>
+
 <body>
+
     <header>
         <nav class="navbar navbar-expand-lg fixed-top mainLayoutNavbar">
             <div class="container-fluid">
@@ -82,6 +99,7 @@
     </header>
 
     <main role="main">
+
         <partial name="PartialViews/_CookieConsentPartial" />
 
         @this.RenderBody()
@@ -91,6 +109,7 @@
         </button>
 
         <div class="toast-container top-0 end-0 p-3"></div>
+
     </main>
 
     <footer class="bookworm-footer">
@@ -102,19 +121,51 @@
         </span>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    @* JQuery Libraries *@
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.21.0/jquery.validate.min.js"
+            integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer">
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js"
+            integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer">
+    </script>
+
+    @* Bootstrap JS *@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous">
+    </script>
+
+    @* Site JS *@
     <script src="~/js/site.js" type="module" asp-append-version="true"></script>
+
     @if (this.User.Identity.IsAuthenticated)
     {
-        <script src="~/js/signalr.min.js"></script>
+        @* SignalR Library *@
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.7/signalr.min.js"
+                integrity="sha512-7SRCYIJtR6F8ocwW7UxW6wGKqbSyqREDbfCORCbGLatU0iugBLwyOXpzhkPyHIFdBO0K2VCu57fvP2Twgx1o2A=="
+                crossorigin="anonymous"
+                referrerpolicy="no-referrer">
+        </script>
+
         <script type="module" src="~/js/notification/notification.js"></script>
+
         <script src="~/js/notification/getUserNotificationCount.js"></script>
     }
+
     <partial name="PartialViews/_UserMessagesPartial" />
 
     @await this.RenderSectionAsync("Scripts", required: false)
+
 </body>
+
 </html>
