--- a/src/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/src/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -29,7 +29,7 @@
             </select>
         </div>
 
-        <h3 class="text-center mt-4">Select number of books</h3>
+        <h3 class="text-center mt-4">Select number of books*</h3>
         <div class="radioButtonsContainer">
             <div class="btn-group"
                  role="group"
