--- a/src/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/src/Web/Bookworm.Web/wwwroot/css/site.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     flex-direction: column;
     padding-top: var(--nav-minHeight);
+    background-color: #275e71;
 }
 
 main {
@@ -209,18 +210,21 @@ main {
 }
 
 .button {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-secondary);
     color: var(--clr-white);
+    border: none !important;
 }
 
     .button:hover {
-        background-color: var(--clr-primary);
-        color: var(--clr-secondary);
+        color: black;
+        background-color: var(--clr-secondary);
+        border: none !important;
     }
 
     .button:active {
-        background-color: var(--clr-primary) !important;
-        color: var(--clr-secondary) !important;
+        color: black !important;
+        background-color: var(--clr-secondary) !important;
+        border: none !important;
     }
 
 .btn-group label {
@@ -284,13 +288,19 @@ main {
 }
 
 /*Pagination Styles*/
-.pagination .page-item a {
-    border: solid 2px black;
+.pagination .page-item {
+    /*border: solid 1px black;*/
 }
 
-.pagination > li > a {
-    background-color: var(--clr-primary);
+.pagination > li > span:hover {
+    cursor: pointer;
+}
+
+.pagination > li > a,
+.pagination > li > span {
+    background-color: var(--clr-secondary);
     color: var(--clr-white);
+    border: solid 1px black;
 }
 
     .pagination > li > a:focus,
@@ -300,12 +310,13 @@ main {
     .pagination > li > span:hover {
         color: var(--clr-black);
         background-color: var(--clr-secondary);
+        border: solid 1px black;
     }
 
 .pagination > .active > span,
 .pagination > .active > span:focus {
-    background-color: var(--clr-secondary);
-    border: solid 2px var(--clr-black);
+    background-color: lightcoral !important;
+    border: solid 1px black;
 }
 
 /*Table Styles*/
@@ -387,9 +398,8 @@ a[class="privacy-link"] {
 }
 
 .title-card {
-    background-color: var(--clr-primary);
-    color: var(--clr-white);
-    border: solid 3px var(--clr-secondary);
+    background-color: var(--clr-secondary);
+    color: var(--clr-black);
     text-align: center;
 }
 
